2008-11-28 [cleroy]	0.9.1cvs7

	* po/fr.po
		Update

2008-10-04 [colin]	0.9.1cvs6

	* src/poppler_viewer.c
		Win32: set translation dir

2008-08-07 [colin]	0.9.1cvs5

	* src/poppler_viewer.c
		Undeprecate

2008-08-05 [colin]	0.9.1cvs4

	* src/poppler_viewer.c
		Fix build

2008-07-29 [colin]	0.9.1cvs3

	* src/poppler_viewer.c
		Switch the main menu to GtkUIManager

2008-07-20 [colin]	0.9.1cvs2

	* src/poppler_viewer.c
		Undeprecate tooltips

2008-04-18 [colin]	0.9.1cvs1

	* src/poppler_viewer.c
		Use claws_unlink instead of g_unlink

2008-04-18 [paul]	0.9.1

	0.9.1 released

	* po/fi.po
	* po/fr.po
	* po/it.po
		updated by Flammie Pirinen, Colin and Andrea Spadaccini

2008-04-18 [colin]	0.9.0cvs2

	* po/fr.po
		Update translation

2008-03-12 [colin]	0.9.0cvs1

	* configure.ac
		Enable -Wall

2008-02-08 [paul]	0.9.0

	0.9.0 released

2008-02-08 [paul]	0.8.0cvs6

	* po/fi.po
	* po/it.po
		updated by Flammie Pirinen and Andrea Spadaccini

2008-02-03 [iwkse]	0.8.0cvs5

	* po/Makevars
		email change

2008-02-03 [iwkse]	0.8.0cvs4

	* po/ca.po
	* po/de.po
	* po/es.po
	* po/fi.po
	* po/hu.po
	* po/pl.po
	* po/pt_BR.po
	* po/sk.po
	* po/sr.po
		address change

2008-01-31 [iwkse]	0.8.0cvs3

	* src/poppler_viewer.c
		Correctly handle uri. thanks to colin

2008-01-31 [iwkse]	0.8.0cvs2

	* po/it.po
		update info/small fixes

2008-01-16 [iwkse]	0.8.0cvs1

	* src/poppler_viewer.c
		Consistence of Buttons , thanks to wwp

2007-12-17 [paul]	0.8.0

	0.8.0 released

2007-12-17 [paul]	0.7.0cvs5

	* po/hu.po
	* po/it.po
		updated by Pader Rezso and Andrea Spadaccini

2007-12-03 [iwkse]	0.7.0cvs4

	* src/poppler_viewer.c
		Fix Cursors in a new window
			thanks to Colin

2007-11-30 [iwkse]	0.7.0cvs3

	* src/poppler_viewer.c
		Fix a leak with the mouse pointer

2007-11-30 [iwkse]	0.7.0cvs2

	* src/poppler_viewer.h
	* src/poppler_viewer.c
			Add clickable Links, internal and external

2007-11-29 [ticho]	0.7.0cvs1

	* configure.ac
		Updated claws-mail minimum version.
