@@ -123,3 +123,4 @@
 ( cvs diff -u -r 1.1.2.86 -r 1.1.2.87 src/poppler_viewer.c;  ) > 0.9.1cvs5.patchset
 ( cvs diff -u -r 1.1.2.87 -r 1.1.2.88 src/poppler_viewer.c;  ) > 0.9.1cvs6.patchset
 ( cvs diff -u -r 1.1.2.4 -r 1.1.2.5 po/fr.po;  ) > 0.9.1cvs7.patchset
+( cvs diff -u -r 1.1.2.88 -r 1.1.2.89 src/poppler_viewer.c;  cvs diff -u -r 1.1.2.12 -r 1.1.2.13 src/poppler_viewer.h;  ) > 0.9.1cvs8.patchset
